Version 1.3 *color corrections for better contrast

--- a/styles/style.css
+++ b/styles/style.css
@@ -714,7 +714,7 @@ a[href^="tel"]::before {
 
 .product-description span {
     font-size: 12px;
-    color: #358ED7;
+    color: #3c3cd6;
     letter-spacing: 1px;
     text-transform: uppercase;
     text-decoration: none;
@@ -723,14 +723,14 @@ a[href^="tel"]::before {
 .product-description h1 {
     font-weight: 300;
     font-size: 52px;
-    color: #43484D;
+    color: #43484d;
     letter-spacing: -2px;
 }
 
 .product-description p {
     font-size: 16px;
     font-weight: 300;
-    color: #86939E;
+    color: #222222;
     line-height: 24px;
 }
 
